--- a/Ej1PAE/app/src/main/res/layout/login.xml
+++ b/Ej1PAE/app/src/main/res/layout/login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
@@ -8,7 +9,7 @@
     android:layout_margin="@dimen/cardview_compat_inset_shadow"
     android:layout_weight="0"
     android:background="#CBCBCB"
-    tools:context=".MainActivity">
+    tools:context=".Login">
 
 
     <LinearLayout
