--- a/Ej1PAE/app/src/main/res/menu/menu.xml
+++ b/Ej1PAE/app/src/main/res/menu/menu.xml
@@ -2,23 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_buscar"
-        android:title="@string/action_buscar"
-        android:icon="@drawable/ic_buscar"
-        android:orderInCategory="100"
+        android:id="@+id/añadir"
+        android:icon="@drawable/icono_add"
+        android:orderInCategory="1"
+        android:title="@string/toolbar_añadir"
         app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/action_nuevo"
-        android:title="@string/action_nuevo"
-        android:icon="@drawable/ic_nuevo"
-        android:orderInCategory="100"
-        app:showAsAction="ifRoom|withText" />
-
-    <item
-        android:id="@+id/action_opciones"
-        android:title="@string/action_opciones"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
 
 </menu>
