--- a/Ej1PAE/app/src/main/res/values/colors.xml
+++ b/Ej1PAE/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange_100">#FE8E00</color>
+    <color name="orange_200">#FFB200</color>
 </resources>
