--- a/Ej1PAE/app/src/main/res/layout/db.xml
+++ b/Ej1PAE/app/src/main/res/layout/db.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
@@ -10,25 +11,27 @@
     android:background="#CBCBCB"
     tools:context=".DB">
 
-    <Toolbar
-        android:id="@+id/ToolbarDB"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/orange_200"
-        app:layout_constraintBottom_toTopOf="@id/JugadoresScroll"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <include android:id="@+id/BarraDeNavegacion"
+        layout="@layout/toolbar" />
 
-    <ScrollView
-        android:id="@+id/JugadoresScroll"
+    <!--
+    Puedo meter el scrollview dentro de un layout que contenga
+    un textfield arriba del todo donde el numero de jugadores
+    es indicado
+
+    Jesus me ha dicho que use un tipo de lista,
+    RecyclerView parecen las mejores
+    https://www.youtube.com/watch?v=5xXTTdTAdU8
+    -->
+
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@drawable/blueborder"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ToolbarDB" />
+        app:layout_constraintTop_toBottomOf="@+id/BarraDeNavegacion" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
