Añadida logica de base de datos y cuadros de dialogos (pendiente de acabar para actualizar jugador)

--- a/Ej1PAE/app/src/main/res/layout/editar_jugador.xml
+++ b/Ej1PAE/app/src/main/res/layout/editar_jugador.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#CBCBCB"
-    tools:context=".CrearJugador">
+    tools:context=".EditarJugador">
 
     <include
         android:id="@+id/BarraDeInicio"
@@ -41,8 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:ems="10"
-                android:inputType="textPersonName"/>
+                android:ems="10"/>
         </LinearLayout>
 
         <LinearLayout
@@ -156,17 +155,6 @@
             android:text="CANCELAR"
             android:textColor="#FFFFFF" />
 
-        <Space
-            android:layout_width="30dp"
-            android:layout_height="match_parent"/>
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/eliminar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/blueborder"
-            android:text="ELIMINAR"
-            android:textColor="#FFFFFF" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
