Cambios importantes de simplificacion realizados y mas funciones añadidas.

--- a/Ej1PAE/app/src/main/res/layout/editar_jugador.xml
+++ b/Ej1PAE/app/src/main/res/layout/editar_jugador.xml
@@ -40,6 +40,7 @@
                 android:id="@+id/CodigoEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:focusable="false"
                 android:layout_weight="1"
                 android:ems="10"/>
         </LinearLayout>
@@ -153,6 +154,18 @@
             android:layout_height="wrap_content"
             android:background="@drawable/blueborder"
             android:text="CANCELAR"
+            android:textColor="#FFFFFF" />
+
+        <Space
+            android:layout_width="30dp"
+            android:layout_height="match_parent"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/eliminar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/blueborder"
+            android:text="ELIMINAR"
             android:textColor="#FFFFFF" />
 
     </LinearLayout>
