--- a/Ej1PAE/app/src/main/res/layout/jugador_item.xml
+++ b/Ej1PAE/app/src/main/res/layout/jugador_item.xml
@@ -27,6 +27,16 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
+        android:id="@+id/CodigoJugador"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Codigo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/PosicionJugador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
